Operator passwords no longer worked in Java 11
The javax.xml.bind used to encode the password was removed.
Kept the old versions as vnmrj/PasswordService.java6 and
passwd/passwd.java6 and updated SConstruct files to test if
java 6 is being used to compile since the Base64
replacement does not exist in java 6.